various fixes for searchng & dark mode

--- a/_resources/css/common.css
+++ b/_resources/css/common.css
@@ -304,6 +304,10 @@ body.dark-theme .filter-container {
   color: #fff;
 }
 
+body.dark-theme #filters {
+  border: 1px solid #666 !important;
+}
+
 body.dark-theme .table {
   color: #fff;
 }
